--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-
+<h2><%= @user.email %>がログイン中</h2>
 <h1>Tasks</h1>
 
 <table>
@@ -11,6 +11,7 @@
       <th>完了フラグ</th>
       <th>作成日</th>
       <th>更新日</th>
+      <th>作成者</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -23,6 +24,7 @@
         <td><%= task.is_done %></td>
         <td><%= task.created_at %></td>
         <td><%= task.updated_at %></td>
+        <td><%= task.email %></td>
         <td><%= link_to 'Show', task %></td>
         <td><%= link_to 'Edit', edit_task_path(task) %></td>
         <td><%= link_to '完了にする',"/tasks/#{task.id}/completed",id: task.id,method: :post %></td>
@@ -42,6 +44,7 @@
       <th>完了フラグ</th>
       <th>作成日</th>
       <th>更新日</th>
+      <th>作成者</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -54,6 +57,7 @@
         <td><%= task.is_done %></td>
         <td><%= task.created_at %></td>
         <td><%= task.updated_at %></td>
+        <td><%= task.email %></td>
         <td><%= link_to 'Show', task %></td>
         <td><%= link_to 'Edit', edit_task_path(task) %></td>
         <td><%= link_to '未完了にする',"/tasks/#{task.id}/incomplete",id: task.id,method: :post %></td>
