--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -12,6 +12,8 @@
       <th>作成日</th>
       <th>更新日</th>
       <th>作成者</th>
+      <th>期限</th>
+      <th>担当者</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -25,6 +27,8 @@
         <td><%= task.created_at %></td>
         <td><%= task.updated_at %></td>
         <td><%= task.email %></td>
+        <td><%= task.duedate %></td>
+        <td><%= task.assignee.email if task.assignee %></td>
         <td><%= link_to 'Show', task %></td>
         <td><%= link_to 'Edit', edit_task_path(task) %></td>
         <td><%= link_to '完了にする',"/tasks/#{task.id}/completed",id: task.id,method: :post %></td>
@@ -45,6 +49,8 @@
       <th>作成日</th>
       <th>更新日</th>
       <th>作成者</th>
+      <th>期限</th>
+      <th>担当者</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -58,6 +64,8 @@
         <td><%= task.created_at %></td>
         <td><%= task.updated_at %></td>
         <td><%= task.email %></td>
+        <td><%= task.duedate %></td>
+        <td><%= task.assignee.email if task.assignee %></td>
         <td><%= link_to 'Show', task %></td>
         <td><%= link_to 'Edit', edit_task_path(task) %></td>
         <td><%= link_to '未完了にする',"/tasks/#{task.id}/incomplete",id: task.id,method: :post %></td>
