--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -15,6 +15,16 @@
   <%= @task.is_done %>
 </p>
 
+<p>
+  <strong>期日:</strong>
+  <%= @task.duedate %>
+</p>
+
+<p>
+  <strong>担当者:</strong>
+  <%= @task.assignee.email if @task.assignee %>
+</p>
+
 <h2>コメント一覧</h2>
 <% @comments.each do |c| %>
   <div>
@@ -24,10 +34,14 @@
   </div>
 <% end %>
 
-<%= form_with model: [@task, @comment] do |f| %>
-  <%= f.text_field :content %>
-  <br>
-  <%= f.submit 'コメントする' %>
+<%= form_with(model: [task, comment], local: true) do |form| %>
+  <div class="field">
+    <%= form.text_field :content, placeholder: 'コメントを入力...', required: true %>
+  </div>
+
+  <div class="actions">
+    <%= form.submit '送信' %>
+  </div>
 <% end %>
 
 <%= link_to 'Edit', edit_task_path(@task) %> |
